--- a/css/style2.css
+++ b/css/style2.css
@@ -4,13 +4,16 @@
   box-sizing: border-box;
 }
 body {
-  padding: 1em;
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-size: 15px;
-  color: #b9b9b9;
-  background-color: #e3e3e3;
-  
-}
+      font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+      font-size: 15px;
+      color: #b9b9b9;
+      background-color: #e3e3e3;
+      background: url('../bk.jpg');
+      background-size: cover;
+      background-position: center center;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+    }
 h4 {
   color: #7ed321;
 }
@@ -174,71 +177,102 @@ select option {
   transition: 0.35s ease-in-out;
   transition: all 0.35s ease-in-out;
 }
-.container-login {
-  min-width: 38em;
-  padding: 1em 3em 2em 3em;
-  margin: 0em auto;
-  background-color: #fff;
-  border-radius: 4.2px;
-  box-shadow: 0px 3px 10px -2px rgba(0, 0, 0, 0.2);
-  position: absolute;
-  top:calc(50% - 14em);
-  left: calc(50% - 19em)
+
+
+
+
+@media screen and (max-width:540px){
+  .container{
+      width: 100vw;
+      padding: 1em 3em 2em 3em;
+      margin-left: auto;
+      margin-right: auto;
+      background-color: #fff;
+      border-radius: 4.2px;
+      box-shadow: 0px 3px 10px -2px rgba(0, 0, 0, 0.2);
+  }
+  .container-login {
+      width: 100vw;
+      height: 100vh;
+      padding: 1em 3em 2em 3em; 
+      margin: auto;
+      background-color: #fff;
+      border-radius: 4.2px;
+      box-shadow: 0px 3px 10px -2px rgba(0, 0, 0, 0.2);
+  }
+ 
 }
-.container{
-  max-width: 38em;
-  padding: 1em 3em 2em 3em;
-  margin: 0em auto;
-  background-color: #fff;
-  border-radius: 4.2px;
-  box-shadow: 0px 3px 10px -2px rgba(0, 0, 0, 0.2);
-  position: absolute;
-  left: calc(50% - 19em);
-  top:2em;
+
+@media screen and (min-width:541px){
+    .container{
+        max-width: 38em;
+        padding: 1em 3em 2em 3em;
+        margin: auto;
+        background-color: #fff;
+        border-radius: 4.2px;
+        box-shadow: 0px 3px 10px -2px rgba(0, 0, 0, 0.2);
+    }
+    .container-login {
+        max-width: 38em;
+        min-height: 30em;
+        padding: 1em 3em 2em 3em; 
+        margin: auto;
+        background-color: #fff;
+        border-radius: 4.2px;
+        box-shadow: 0px 3px 10px -2px rgba(0, 0, 0, 0.2);
+        position: relative;
+        top:calc(50vh - 15em);
+    }
 }
-.row {
-  zoom: 1;
-}
-.row:before,
-.row:after {
-  content: "";
-  display: table;
-}
-.row:after {
-  clear: both;
-}
-.col-half {
-  padding-right: 10px;
-  float: left;
-  width: 50%;
-}
-.col-half:last-of-type {
-  padding-right: 0;
-}
-.col-third {
-  padding-right: 10px;
-  float: left;
-  width: 33.33333333%;
-}
-.col-third:last-of-type {
-  padding-right: 0;
-}
-@media only screen and (max-width: 540px) {
+
+
+
+
+
+
+  .row {
+    zoom: 1;
+  }
+  .row:before,
+  .row:after {
+    content: "";
+    display: table;
+  }
+  .row:after {
+    clear: both;
+  }
   .col-half {
-    width: 100%;
+    padding-right: 10px;
+    float: left;
+    width: 50%;
+  }
+  .col-half:last-of-type {
     padding-right: 0;
   }
-}
+  .col-third {
+    padding-right: 10px;
+    float: left;
+    width: 33.33333333%;
+  }
+  .col-third:last-of-type {
+    padding-right: 0;
+  }
+  @media screen and (max-width: 540px) {
+    .col-half {
+      width: 100%;
+      padding-right: 0;
+    }
+  }
 
-.nextbutton{
-  color:#777;
-}
-.nextbutton:hover{
-  cursor: pointer;
-  background: #7ed321;
-  color: #fff;
-}
+  .nextbutton{
+    color:#777;
+  }
+  .nextbutton:hover{
+    cursor: pointer;
+    background: #7ed321;
+    color: #fff;
+  }
 
-tr{
-  width: 100px;
-}
+  tr{
+    width: 100px;
+  }
